se agrego grid y icono

--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculo de notas</title>
+    <link rel="shortcut icon" href="recursos/icon2-removebg-preview.png">
     <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
-    <header>
-        <h1>SANTIAGO BONILLA NIÑO - DANIEL ALEJANDRO CADENA</h1>
-    </header>
-    <section>
-        <table>
-            <td>
+    <main>
+        <header>
+            <h1>SANTIAGO BONILLA NIÑO - DANIEL ALEJANDRO CADENA</h1>
+        </header>
+        <section id="section1">
+            <table>
+                <td>
+                </td>
+            </table>
+        </section>
+        <section id="section2">
+            formulario
+        </section>
 
-            </td>
-        </table>
-    </section>
+    </main>
+
 </body>
 </html>
